       podcast rss, subtitle fields and release date to displayable
       fields.

       IMPROVEMENT: Support playcounts on iPod Shuffle as well

       UPDATED: Italian translation (thanks to Edward Matteucci)

       BUGFIX: 'Check iPod's files' could crash under certain
       circumstances (thanks to David Mansfield for the patch).

gtkpod V0.95.CVS
       NEW: script to sync addressbooks in ldif format provided by
       Sebastien BERIDOT.

       NEW: script to sync kNotes (KDE note program) provided by
       Sebastian Scherer.

       CHANGE: MP3 tags: use 'Band/Orchestra/Accompaniment' (TPE2) as
       artist if it exists. Otherwise use 'Lead artist/Lead
       performer/Soloist/Performing group' (TPE1) as before. Let me
       know if this causes problems for you.

       UPDATED Hebrew translation (thanks to Assaf Gillat)

       SAFETY: call sync() and flush all buffers to the iPod after
       writing the iTunesDB -- should minimise filesystem errors
       caused by people disconnecting the iPod without unmounting.

       BUGFIX: Copying playlists by drag and drop could confuse smart
       playlists referencing these playlists. Fixed.

After copying playlists by drag and drop, smart
       playlists refering to these playlists could become confused.

gtkpod V0.94.0
       NEW FEATURE: stable sorting of track view. This allows you, for
       example, to first sort by title, then by artist. The list will
       then be sorted by artist, but all titles of each artist remain
       sorted as well (before the tiles were random).
       Arbitrary depth and order of stable sorting is possible by
       clicking the sort columns in the desired order.

       NEW FEATURE: define your own ignore list of words that should
       be ignored during sorting (sort options: ctrl-s).

       IMPROVEMENT: improved handling of dangling files (files that
       are referenced in the iTunesDB but are not present on the
       iPod).
