@@ -20,6 +20,9 @@ gtkpod V0.96.CVS
        BUGFIX: 'Check iPod's files' could crash under certain
        circumstances (thanks to David Mansfield for the patch).
 
+       BUGFIX: Lame's Replay Gain was read incorrectly for certain
+       values. Thanks to Chris Brotherton for tracking this down.
+
 gtkpod V0.95.CVS
        NEW: script to sync addressbooks in ldif format provided by
        Sebastien BERIDOT.
